fix: correct alert visibility

--- a/client/src/app/components/alert/alert.component.scss
+++ b/client/src/app/components/alert/alert.component.scss
@@ -27,7 +27,7 @@ dialog {
   }
 
   &.hidden {
-    margin-top: -5rem;
+    margin-top: -10rem;
     transition: all 0.4s ease-in-out;
   }
 }
